@@ -1,3 +1,9 @@
+2020-03-06 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_check_menu_item.c: Replace GtkToggleAction related
+      operations with GedaToggleAction counterparts because later is no longer
+      derived from the former.
+
 2020-03-05 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_action.c: Remove unnecessary check for GEDA_IS_TOGGLE_ACTION
